# particlepacking-rust

./: Cargo.toml  CircleGridUniform.txt  README.md  RustCircleUniformGrid.txt  RustCircleUniformGridSQUARE.txt  RustCircleUniformGridSQUARE50kr.txt  input.txt
src/: algorithm.rs  celllist.rs  dataio.rs  main.rs  plotting.rs  point.rs
